# IdentityDemo

./: .gitignore  Gruntfile.js  Makefile.am  README-smtp.md  README.md  bcsaid.spec  bower.json  package.json
certs/: README  cert.pem  create_dev_keys  key.pem  telxio-encrypted.key  telxio.crt
client/console/: alert.js  app.js  backgridExt.js  main.js  permission.js  popup.js  profile.js  role.js  user.js  util.js
client/styles/: bcsa.less
client/views/: profile.jade  set_password.jade  show_token.jade
config/: default.json  dev.json
server/: app.js  auth.js  boot.js  email.js  rest.js  ua.js
server/controllers/api/prov/v1.0/auth/: index.js
server/controllers/permission/: index.js
server/controllers/role/: index.js
server/controllers/table/: index.js
server/controllers/user/: index.js
server/controllers/validator/: index.js
server/models/: acorn_config_v1.js  bcsa_config_v1.js  permission.js  role.js  table.js  user.js
server/templates/activateAccount/: html.ejs  text.ejs
server/templates/passwordChanged/: html.ejs  style.ejs  text.ejs
server/templates/passwordReset/: html.ejs  text.ejs
server/templates/profileUpdated/: html.ejs  text.ejs
server/templates/welcome/: html.ejs  text.ejs
server/views/: activate.jade  forgot.jade  index.jade  layout.jade  layout_min.jade  login.jade  permissions.jade  profile.jade  profileDialog.jade  reset.jade  roles.jade  signup.jade  users.jade  validation.jade  verify.jade
validationRepo/: FirstNameLastNameNotEmpty.js  UniqueStringInCollection.js  UserModel.js
(+1 files in other folders)
